--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -1,7 +1,16 @@
 .card-stacker {
-  height: 80%;
+  height: 85%;
 }
 
 .page-content {
   background: rgba(215, 224, 255, 1);
+}
+
+.bar{
+  position: relative;
+  height: 3%;
+  border-radius: 3em;
+  margin-top: 1em;
+  width: 70%;
+  margin-left: 15%;
 }
