Rename App and Refactor code

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.body{
+.body {
   background-color: aliceblue;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
