--- a/src/MCQComponents/MCQCard.css
+++ b/src/MCQComponents/MCQCard.css
@@ -19,7 +19,7 @@
 }
 
 .mcqquestion-text {
-  font-size: 40px;
+  font-size: 2.5em;
   font-weight: 900;
   position: absolute;
   text-align: center;
