--- a/src/MCQComponents/Choices.css
+++ b/src/MCQComponents/Choices.css
@@ -1,6 +1,9 @@
 .choice-container {
+  backface-visibility: hidden;
   display: flex;
   flex-direction: column;
-  margin: 0.2rem 0.2rem;
   height: 38%;
+  position: absolute;
+  bottom: 0.3rem;
+  width: 97%;
 }
