--- a/src/components/Indicators.css
+++ b/src/components/Indicators.css
@@ -76,7 +76,7 @@
 }
 
 .onemore {
-  bottom: 2em;
+  bottom: 40%;
   width: 50%;
 }
 
@@ -89,7 +89,7 @@
 }
 
 .nomore {
-  top: 2em;
+  top: 2.5em;
   width: 50%;
 }
 
