Add visual shaking

--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -8,6 +8,31 @@
   height: 100%;
 }
 
+.card-stacker-animate {
+  height: 100%;
+  animation: shake 0.55s cubic-bezier(.36,.07,.19,.97) both;
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-2px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-3px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(3px, 0, 0);
+  }
+}
+
 .page-content {
   background: rgba(215, 224, 255, 1);
 }
