--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -10,25 +10,30 @@
 
 .card-stacker-animate {
   height: 100%;
-  animation: shake 0.55s cubic-bezier(.36,.07,.19,.97) both;
+  animation: shake 0.55s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   backface-visibility: hidden;
   perspective: 1000px;
 }
 
 @keyframes shake {
-  10%, 90% {
+  10%,
+  90% {
     transform: translate3d(-2px, 0, 0);
   }
-  
-  20%, 80% {
+
+  20%,
+  80% {
     transform: translate3d(2px, 0, 0);
   }
 
-  30%, 50%, 70% {
+  30%,
+  50%,
+  70% {
     transform: translate3d(-3px, 0, 0);
   }
 
-  40%, 60% {
+  40%,
+  60% {
     transform: translate3d(3px, 0, 0);
   }
 }
