--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -10,9 +10,7 @@
 
 .card-stacker-animate {
   height: 100%;
-  animation: shake 0.55s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-  backface-visibility: hidden;
-  perspective: 1000px;
+  animation: shake 0.55s cubic-bezier(0.36, 0.07, 0.19, 0.97);
 }
 
 @keyframes shake {
