--- a/src/MCQComponents/MCQCard.css
+++ b/src/MCQComponents/MCQCard.css
@@ -11,7 +11,7 @@
   height: 100%;
   position: relative;
   opacity: 1;
-  box-shadow: rgba(123,135, 185) 0px 4px 6px;
+  box-shadow: rgba(123, 135, 185) 0px 4px 6px;
 }
 
 .mcqcard-content {
@@ -35,7 +35,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: rotateY(0deg)
+  transform: rotateY(0deg);
 }
 
 .mcqquestion-text-back {
@@ -50,5 +50,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: rotateY(180deg) translateZ(3px)
+  transform: rotateY(180deg) translateZ(3px);
 }
