--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -1,6 +1,6 @@
 
 .toast {
-  height: 10%;
+  height: 12%;
   width: 60%;
   color: white;
   padding: 0.02rem;
@@ -8,27 +8,27 @@
   border: 0.1rem solid aliceblue;
   box-shadow: 0rem 2px 4px gainsboro;
   border-radius: 0.4rem;
-  background-color: #d9534f;
+  background-color: #f0ad4e;
   top: 45%;
   left: 20%;
-  opacity: 0;
-  transition: transform 2s ease-in-out;
   display: block;
+  transition: transform 2s ease-in-out;
   animation: toast-in-center 2s;
 }
 
 
 .message-title{
   font-weight: bold;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   text-align: center;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
+  margin-top: 0.2rem;
+  margin-bottom: 0.1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .message-text{
   text-align: center;
-  margin-top: 1rem;
   font-weight: bold;
 }
 
@@ -37,7 +37,7 @@
   opacity: 0;
  }
  25%, 75%{
-  opacity: 0.95;
+  opacity: 0.90;
  }
  100%{
   opacity: 0;
