--- a/src/App.css
+++ b/src/App.css
@@ -35,22 +35,22 @@
 }
 
 .suitdiamonds:before, .suitdiamonds:after {
-  content: "♦";
+  content: "";
   color: #ff0000;
 }
  
 .suithearts:before, .suithearts:after {
-  content: "♥";
+  content: "";
   color: #ff0000;
 }
  
 .suitclubs:before, .suitclubs:after {
-  content: "♣";
+  content: "";
   color: #000;
 }
  
 .suitspades:before, .suitspades:after {
-  content: "♠";
+  content: "";
   color: #000;
 }
 
@@ -83,4 +83,67 @@ div[class*='suit']:after {
 
 .card:hover {
   cursor: pointer;
+}
+
+.spread{
+  position: relative;
+  width: 2.5rem;
+  height: 3.2rem;
+}
+
+.spread > .tab-card {
+  position: absolute;
+  top: 2%;
+  left: 40%;
+  -webkit-transition: top 0.3s ease, left 0.3s ease;
+  -moz-transition: top 0.3s ease, left 0.3s ease;
+  -o-transition: top 0.3s ease, left 0.3s ease;
+  -ms-transition: top 0.3s ease, left 0.3s ease;
+  transition: top 0.3s ease, left 0.3s ease;
+}
+
+.spread:hover .suitdiamonds {
+  left: 42%;
+  top: 0.01rem;
+  -webkit-transform: rotate(-10deg);
+  -moz-transform: rotate(-10deg);
+  -o-transform: rotate(-10deg);
+  -ms-transform: rotate(-10deg);
+  transform: rotate(-10deg);
+}
+ 
+.spread:hover .suithearts {
+  left: 46%;
+  top: 0.03rem;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  transform: rotate(0deg);
+}
+ 
+.spread:hover .suitclubs {
+  left: 50%;
+  top: 0.05rem;
+  -webkit-transform: rotate(10deg);
+  -moz-transform: rotate(10deg);
+  -o-transform: rotate(10deg);
+  -ms-transform: rotate(10deg);
+  transform: rotate(10deg);
+}
+ 
+.spread:hover .suitspades{
+  left: 53%;
+  top: 0.15rem;
+  -webkit-transform: rotate(20deg);
+  -moz-transform: rotate(20deg);
+  -o-transform: rotate(20deg);
+  -ms-transform: rotate(20deg);
+  transform: rotate(20deg);
+}
+
+
+.spread > .tab-card:hover {
+  -webkit-box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
+  box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
 }
