--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,12 @@
 .tab-card {
   margin:0;
   padding: 0;
-  position: relative;
+  position: absolute;
+  left: 45%;
+  
   float: left;
   width: 2rem;
-  height: 2.93rem;
+  height: 2.9rem;
   border: 1px solid black;
   border-radius: 5px;
   background: #fff;
@@ -21,6 +23,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: top 0.3s ease, left 0.3s ease;
 }
 
 .tab-card p{
@@ -32,40 +35,6 @@
 .icons {
   --color: aliceblue;
   --color-selected: aquamarine;
-}
-
-.suitdiamonds:before, .suitdiamonds:after {
-  content: "";
-  color: #ff0000;
-}
- 
-.suithearts:before, .suithearts:after {
-  content: "";
-  color: #ff0000;
-}
- 
-.suitclubs:before, .suitclubs:after {
-  content: "";
-  color: #000;
-}
- 
-.suitspades:before, .suitspades:after {
-  content: "";
-  color: #000;
-}
-
-div[class*='suit']:before {
-  position: absolute;
-  font-size: 10px;
-  left: 0.01rem;
-  top: 0.01rem;
-}
-
-div[class*='suit']:after {
-  position: absolute;
-  font-size: 10px;
-  right: 0.01rem;
-  bottom: 0.01rem;
 }
 
 .hand{
@@ -89,61 +58,36 @@ div[class*='suit']:after {
   position: relative;
   width: 2.5rem;
   height: 3.2rem;
-}
-
-.spread > .tab-card {
-  position: absolute;
-  top: 2%;
-  left: 40%;
-  -webkit-transition: top 0.3s ease, left 0.3s ease;
-  -moz-transition: top 0.3s ease, left 0.3s ease;
-  -o-transition: top 0.3s ease, left 0.3s ease;
-  -ms-transition: top 0.3s ease, left 0.3s ease;
   transition: top 0.3s ease, left 0.3s ease;
 }
 
-.spread:hover .suitdiamonds {
-  left: 42%;
-  top: 0.01rem;
-  -webkit-transform: rotate(-10deg);
-  -moz-transform: rotate(-10deg);
-  -o-transform: rotate(-10deg);
-  -ms-transform: rotate(-10deg);
-  transform: rotate(-10deg);
+.spread > .tab-card {
+  
+  transition: top 0.3s ease, left 0.3s ease;
 }
- 
-.spread:hover .suithearts {
-  left: 46%;
-  top: 0.03rem;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
+
+.activate{
+  box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
+}
+
+.first-activate{
+  
+  left: 48%;
+  top: 0.15rem;
+  transform: rotate(10deg);
+  
+}
+
+.second-activate{
+  
+  left: 45%;
+  top: 0.12rem;
   transform: rotate(0deg);
 }
- 
-.spread:hover .suitclubs {
-  left: 50%;
-  top: 0.05rem;
-  -webkit-transform: rotate(10deg);
-  -moz-transform: rotate(10deg);
-  -o-transform: rotate(10deg);
-  -ms-transform: rotate(10deg);
-  transform: rotate(10deg);
-}
- 
-.spread:hover .suitspades{
-  left: 53%;
-  top: 0.15rem;
-  -webkit-transform: rotate(20deg);
-  -moz-transform: rotate(20deg);
-  -o-transform: rotate(20deg);
-  -ms-transform: rotate(20deg);
-  transform: rotate(20deg);
-}
 
-
-.spread > .tab-card:hover {
-  -webkit-box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
-  box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
+.third-activate{
+  
+  left: 42%;
+  top: 0.03rem;
+  transform: rotate(-10deg);
 }
