--- a/src/MCQComponents/Choices.css
+++ b/src/MCQComponents/Choices.css
@@ -1,15 +1,5 @@
+/* Styling for the choice container */
 .choice-container {
-  backface-visibility:hidden;
-  display: flex;
-  flex-direction: column;
-  height: 40%;
-  position: absolute;
-  bottom: 0.3rem;
-  width: 97%;
-  transform: rotateY(0deg)
-}
-
-.choice-container-back{
   backface-visibility: hidden;
   display: flex;
   flex-direction: column;
@@ -17,5 +7,15 @@
   position: absolute;
   bottom: 0.3rem;
   width: 97%;
-  transform: rotateY(180deg) translateZ(3px)
+  transform: rotateY(0deg);
+}
+
+/* Front-Side styling */
+.front-side {
+  transform: rotateY(0deg);
+}
+
+/* Back-side styling */
+.back-side {
+  transform: rotateY(180deg) translateZ(3px);
 }
