--- a/src/MCQComponents/MCQChoice.css
+++ b/src/MCQComponents/MCQChoice.css
@@ -1,21 +1,25 @@
+/* Text Styling for Individual Choice */
 .choice-text {
   font-size: 1.2em;
   font-weight: bold;
 }
 
-.initial-button {
-  --background: slateblue;
+/* Styling for the button before any clicking */
+.choice-button {
   flex-grow: 1;
 }
+.initial-button {
+  --background: slateblue;
+}
 
+/* Styling for the correct button after clicking */
 .correct-button {
   --background: darkgreen;
   --background-activated: darkgreen;
-  flex-grow: 1;
 }
 
+/* Styling for the incorrect button after clicking */
 .incorrect-button {
   --background: crimson;
   --background-activated: crimson;
-  flex-grow: 1;
 }
