Change the texts and adding comments

--- a/src/pages/LoadingPage.css
+++ b/src/pages/LoadingPage.css
@@ -1,8 +1,10 @@
+/* Styling for the text: "Retriving Cards" */
 .retrieving-text {
   text-align: center;
   font-weight: 900;
 }
 
+/* Styling for the Progress Bar */
 .bar {
   position: relative;
   height: 4%;
@@ -14,10 +16,12 @@
   --buffer-background: snow;
 }
 
+/* Background Color */
 .loading-content {
   background: rgba(215, 224, 255, 1);
 }
 
+/* Wrapper for the text and bar */
 .wrapper {
   display: flex;
   flex-direction: column;
