--- a/src/CardComp/Card.css
+++ b/src/CardComp/Card.css
@@ -24,6 +24,10 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-inline-start: 20px;
+  padding-inline-end: 20px;
 }
 
 /* QA Card has a flipping time of 0.6s */
@@ -39,7 +43,6 @@
 /* Texts for both question and answer */
 .card-text {
   backface-visibility: hidden;
-  font-weight: 900;
   margin: 0 1.5rem;
   position: absolute;
   text-align: center;
