--- a/src/components/Indicators.css
+++ b/src/components/Indicators.css
@@ -28,6 +28,7 @@
   justify-content: center;
   align-items: center;
   padding: 5px;
+  background-color:snow;
 }
 
 /* Styling for the negative indicator's container */
