--- a/src/CardComp/Card.css
+++ b/src/CardComp/Card.css
@@ -48,13 +48,35 @@
   text-align: center;
   justify-content: center;
   display: flex;
+  flex-direction: column;
   align-items: center;
+}
+
+.card-text p{
+  margin: 0;
+  font-size: x-large;
+}
+
+.card-text hr{
+  height: 1px;
+  border: 1px solid black;
+  width: 100%;
+}
+
+.card-text pre{
+  font-size: x-large;
+  background-color: #f6f6f6;
+}
+
+.card-text code{
+  font-size: large;
+  background: #f6f6f6;
 }
 
 /* Front Question Text with 0 degree */
 
 .front-text {
-  font-size: 1.6em;
+  
   transform: rotateY(0deg);
 }
 
@@ -68,7 +90,7 @@
 }
 
 .back-text-1d6em {
-  font-size: 1.6em;
+  font-size: 2em;
 }
 
 .back-text-1d3em {
