--- a/src/MCQComponents/MCQChoice.css
+++ b/src/MCQComponents/MCQChoice.css
@@ -5,7 +5,7 @@
 }
 
 .choice-text code{
- background-color: mediumpurple;
+ /* background-color: mediumpurple; */
 }
 
 /* Styling for the button before any clicking */
