--- a/src/pages/LogInPage.css
+++ b/src/pages/LogInPage.css
@@ -25,6 +25,9 @@
   font-weight: 900;
   font-size: 3.2em;
   position: relative;
+  color:transparent;
+  animation: showWelcome forwards;
+  animation-delay: 1100ms;
 }
 
 .welcome-covering{
@@ -32,5 +35,23 @@
   left: 0;
   background: mediumslateblue;
   height: 100%;
-  width: 100%;
+
+  animation: reveal-welcome 1500ms ease-out;
+}
+
+@keyframes reveal-welcome {
+  70%{
+    width: 100%;
+    left: 0%;
+  }
+  100%{
+    width: 0%;
+    left: 100%;
+  }
+}
+
+@keyframes showWelcome {
+  to{
+    color: snow;
+  }
 }
