Add animation to the login button

--- a/src/pages/LogInPage.css
+++ b/src/pages/LogInPage.css
@@ -24,6 +24,7 @@
   color: snow;
   font-weight: 900;
   font-size: 3.2em;
+  font-family: "Montserra", sans-serif;
   position: relative;
   color:transparent;
   animation: showWelcome forwards;
