--- a/src/LogInComp/LogInButton.css
+++ b/src/LogInComp/LogInButton.css
@@ -1,7 +1,8 @@
 .login-button {
   position: absolute;
+  --border-radius: 3px;
   bottom: 15%;
-  width: 75%;
+  width: 70%;
   height: 5%;
   font-size: 1.5em;
   font-weight: bold;
