--- a/src/FlashCardComp/FlashCardList.css
+++ b/src/FlashCardComp/FlashCardList.css
@@ -1,6 +1,13 @@
+.overall {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
 /* Styling for the overall card component user will see */
 .tuple {
   position: absolute;
   height: 100%;
   width: 100%;
 }
+
